@@ -1,1 +1,2 @@
 DIST ffc-1.2.0.tar.gz 4457544 SHA256 ac7cca537dac4610821c9ecb0338700970d713d03a9bc176567f1979c89ed869 SHA512 fd2a54764716c03894d779c6574deaea732df8e925e9c77474b969168fa2add8c189e0e9e7e163aa67008650fd1918dd2257cc990b5ab19e65a86b95f5eaed1b WHIRLPOOL 2feeadded0a6f2b259e99632bc5999a2bc3a27fa31fac44603badaa375557a2e0224964896eaf388a0e0c921a973562bf9548d0e8fbfd6833b17561f3613c34c
+DIST ffc-1.3.0.tar.gz 261707 SHA256 f4215a210de45cbbeedd56260299c28cf9bd9502f1965e76ec2d7174cf2f3915 SHA512 72151fb37a14afcd5f9e64db4e45a5a523660497c09e37b183150194fdf62496ba804d82518f8a378f0e225be5f47db57783ab8f2917d16ef996e3a84ef09054 WHIRLPOOL 6e7876cca037737cb10e6fab966fc56c2b8efd4ae2373d006e791ee4f12efb26e71c37cf8176e2e6c8b84539c09694ebed3aa32bb41e5e2eff5a444f9725e624
