@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/ffc
-# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
+# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
+
+*ffc-1.3.0 (11 Jul 2014)
+
+  11 Jul 2014; Andrew Reisner <andrew@reisner.co> +ffc-1.3.0.ebuild:
+  version bump
 
 *ffc-1.2.0 (13 Jun 2013)
 
@@ -13,4 +18,3 @@
   14 Dec 2010; Nico Schlömer <nico.schloemer@gmail.com> +ffc-0.9.4.ebuild,
   +metadata.xml:
   Initial import.
-
